ensure that create cluster button is visible

--- a/helix-front/src/app/cluster/cluster-list/cluster-list.component.scss
+++ b/helix-front/src/app/cluster/cluster-list/cluster-list.component.scss
@@ -1,6 +1,25 @@
 @use '@angular/material' as mat;
 @import 'src/theme.scss';
 
+.mat-nav-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.cluster-list-button-group {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 1rem;
+}
+
+.back-to-index-button {
+  align-self: flex-start;
+}
+
+.add-cluster-button {
+  align-self: flex-end;
+}
+
 .mat-spinner {
   margin: 20px;
 }
@@ -12,12 +31,6 @@
 
 .error-message {
   padding: 10px;
-}
-
-.mat-mini-fab {
-  position: fixed;
-  right: 16px;
-  top: 16px;
 }
 
 .empty {
